# sidepool

./: DEV.md  README.md  loki.yml  postgres.yml  run_bitcoin_signet.sh  run_roles.sh  sidepool.sql  tasks.md
api-gateway/: Cargo.toml
api-gateway/src/: main.rs
api_gateway/: .env  Cargo.toml  Rocket.toml  database.db  sidepool.db
api_gateway/migrations/0001_initial/: up.sql
api_gateway/src/: apikey.rs  main.rs  models.rs  schema.rs  tests.rs
api_gateway/src/routes/: hashrate_update_log.rs  miner_profile.rs  mining_authorize.rs  mining_notify.rs  mining_subscribe.rs  mod.rs  submit_shares.rs
api_gateway/static/: app.js  index.html  style.css
config/: loki-config.yaml  promtail.yml  tproxy.toml
