[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
diesel = { version = "2.1.6", features = ["sqlite"] }
rocket_sync_db_pools = { version = "0.1", features = ["diesel_sqlite_pool"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rocket_cors = "0.6.0"

[dev-dependencies]
rocket = { version = "0.5", features = ["json"] }
diesel = { version = "2.1.6", features = ["sqlite"] }
rocket_sync_db_pools = { version = "0.1", features = ["diesel_sqlite_pool"] }
assert-json-diff = "=2.0.2"
chrono = { version = "0.4", features = ["serde"] }
rocket_cors = "0.6.0"